--- a/Portfolio/portfolio.html
+++ b/Portfolio/portfolio.html
@@ -36,12 +36,11 @@
             <div class="project-card">
                 <h3>Portfolio Website</h3>
                 <p>A responsive portfolio built using HTML5:CSS3, showcasing smooth animations and transitions.</p>
-                <a href="https://github.com/routhugopalakrishna/githubs" target="_blank">View on GitHub</a>
+                <a href="https://github.com/routhugopalakrishna/githubs/tree/master/Portfolio" target="_blank">View on GitHub</a>
             </div>
             <div class="project-card">
                 <img src="pics/E-comus1.jpg.png" alt="E-commerce Web App" class="e-comus">
-                <h3>E-comus Web project</h3>
-                <h3>E-mart demo project</h3>
+                <h3>E-comus projects</h3>
                 <p>Developed a full-featured e-commerce web app with product listings, search, and shopping cart features.</p>
                 <a href="https://github.com/routhugopalakrishna/githubs/tree/master/Ecomus%20project/Ecomus" target="_blank">View on GitHub</a>
             </div>
@@ -69,6 +68,11 @@
                 <a href="mailto:routhugopalakrishna@gmail.com"><img src="pics/112-gmail_email_mail-512.jpg" alt="Email"></a>
                 <a href="https://github.com/routhugopalakrishna" target="_blank"><img src="pics/git hub.png.png" alt="GitHub"></a>
                 <a href="https://www.linkedin.com/in/gopala-krishna-routhu/" target="_blank"><img src="pics/link in.png.jpg" alt="LinkedIn"></a>
+            </div>
+            <div class="resume-section">
+                <a href="Gopala krishna  R Resume..pdf" class="btn" download>
+                    Download My Resume
+                </a>
             </div>
         </div>
     </section>
