--- a/Portfolio/portfolio.html
+++ b/Portfolio/portfolio.html
@@ -70,7 +70,7 @@
                 <a href="https://www.linkedin.com/in/gopala-krishna-routhu/" target="_blank"><img src="pics/link in.png.jpg" alt="LinkedIn"></a>
             </div>
             <div class="resume-section">
-                <a href="Gopala krishna  R Resume..pdf" class="btn" download>
+                <a href="Gopala krishna R Resume...pdf" class="btn" download>
                     Download My Resume
                 </a>
             </div>
